Adding alpha vantage

--- a/news-explorer-server/.env
+++ b/news-explorer-server/.env
@@ -5,3 +5,4 @@ NEW_YORK_TIMES_API_KEY=L9GN2HcS0FK6q9Jf6LnMvShAYraMCOyd
 NEW_YORK_TIMES_EXTERNAL_ROUTE=https://api.nytimes.com/svc/search/v2/articlesearch.json
 GUARDIAN_API_KEY=4878ace4-d591-498b-92a1-2b0412d71089
 GUARDIAN_EXTERNAL_ROUTE=https://content.guardianapis.com/search
+ALPHA_VANTAGE_API_KEY=T6J4GRM1FR1EZ0T7
