--- a/news-explorer-server/.env
+++ b/news-explorer-server/.env
@@ -6,3 +6,4 @@ NEW_YORK_TIMES_EXTERNAL_ROUTE=https://api.nytimes.com/svc/search/v2/articlesearc
 GUARDIAN_API_KEY=4878ace4-d591-498b-92a1-2b0412d71089
 GUARDIAN_EXTERNAL_ROUTE=https://content.guardianapis.com/search
 ALPHA_VANTAGE_API_KEY=T6J4GRM1FR1EZ0T7
+ALPHA_VANTAGE_EXTERNAL_ROUTE=https://www.alphavantage.co/query?
